Setup pages as templates. Login and register screens now make requests correctly

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,10 @@
 {
-  "name": "HelloIonic",
+  "name": "Rentee",
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.4"
+  },
+  "dependencies": {
+    "ng-token-auth": "^0.0.28"
   }
 }
